--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix && npm run swagger",
     "build": "npm run clean && tsc",
     "prestart": "npm run build",
     "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rm -rf dist/"
+    "clean": "rm -rf dist/",
+    "swagger": "tsoa spec",
+    "predev": "npm run swagger",
+    "dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec\""
+  },
+  "nodemonConfig": {
+    "watch": ["src"],
+    "ext": "ts",
+    "exec": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,12 +26,18 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "http-status-codes": "^2.1.4",
-    "mongoose": "^5.11.19"
+    "mongoose": "^5.11.19",
+    "swagger-ui-express": "^4.1.6",
+    "tsoa": "^3.5.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/http-status-codes": "^1.2.0",
     "@types/node": "^14.14.32",
+    "@types/swagger-ui-express": "^4.1.2",
+    "concurrently": "^6.0.0",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "typescript": "^4.2.3"
   }
